commit practice file

--- a/practice.htm
+++ b/practice.htm
@@ -12,8 +12,16 @@
     <h3>Head 3</h3>
     <h4>Head 4</h4>
     <h5>Head 5</h5>
-    <h6>Head 6</h6>
 
+    <h6>Head 6</h6>
+    
     <p>This is first paragraph</p>
+    <!-- Below are the short cuts for VS Code -->
+    <!-- Thi is a comment line ctrl / is the short cut -->
+    <!-- Alt UP and Down to move a line up and down -->
+    <!-- Ctrl L is to select a line -->
+    <!-- Ctrl Enter is to insert a new line -->
+    <!-- Ctrl k and Ctrl s is to get the short key details -->
+
 </body>
 </html>
